# UGHI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  easy-use.md  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/ughi-computer/: Cargo.toml
crates/ughi-computer/src/: computer.rs  connectors.rs  lib.rs  router.rs  workflow.rs
crates/ughi-desktop/: Cargo.toml  tauri.conf.json
crates/ughi-desktop/icons/: icon.icns
crates/ughi-desktop/src/: main.rs
crates/ughi-desktop/ui/: index.html
crates/ughi-evolution/: Cargo.toml
crates/ughi-evolution/src/: engine.rs  lessons.rs  lib.rs  meta_agent.rs  patterns.rs
crates/ughi-expert/: Cargo.toml
crates/ughi-expert/src/: lib.rs  persona.rs  selector.rs
crates/ughi-fleet/: Cargo.toml
crates/ughi-fleet/src/: lib.rs  manager.rs
crates/ughi-inference/: Cargo.toml
crates/ughi-inference/src/: engine.rs  error.rs  lib.rs  model.rs  reflect.rs  request.rs  sampler.rs
crates/ughi-integrations/: Cargo.toml
crates/ughi-integrations/src/: chat.rs  lib.rs  proactive.rs
crates/ughi-kernel/: Cargo.toml
crates/ughi-kernel/src/: main.rs
crates/ughi-kernel/tests/: integration_test.rs
crates/ughi-marketplace/: Cargo.toml
crates/ughi-marketplace/src/: lib.rs  registry.rs
crates/ughi-memory/: Cargo.toml
crates/ughi-memory/src/: error.rs  lib.rs  long_term.rs  migrations.rs  namespace.rs  pruning.rs  search.rs  short_term.rs  types.rs
crates/ughi-multimedia/: Cargo.toml
crates/ughi-multimedia/src/: config.rs  image.rs  lib.rs  video.rs
crates/ughi-runtime/: Cargo.toml
crates/ughi-runtime/src/: agent.rs  backup.rs  error.rs  healing.rs  hibernation.rs  lib.rs  memory.rs  metrics.rs  runtime.rs  scheduler.rs
crates/ughi-skills/: Cargo.toml
crates/ughi-skills-registry/: Cargo.toml
crates/ughi-skills-registry/src/: client.rs  integrity.rs  lib.rs
crates/ughi-skills/src/: executor.rs  lib.rs
crates/ughi-wasm/: Cargo.toml
crates/ughi-wasm/src/: capability.rs  error.rs  lib.rs  resource.rs  sandbox.rs  skill_registry.rs  violation.rs
crates/ughi-workflows/: Cargo.toml
crates/ughi-workflows/src/: composer.rs  lib.rs
docs/: agent.md  skills.md  strict_rules.md
helm/ughi/: Chart.yaml  values.yaml
helm/ughi/templates/: _helpers.tpl  deployment.yaml  service.yaml
k8s/: deployment.yaml
loadtest/: k6.js
monitoring/: nginx.conf  prometheus.yml
orchestrator/: go.mod  go.sum  main.go
orchestrator/pkg/api/: handlers.go  server.go
orchestrator/pkg/auth/: auth.go  auth_test.go
orchestrator/pkg/dashboard/: dashboard.go
orchestrator/pkg/integrations/: discord.go  slack.go  telegram.go
orchestrator/pkg/kernel/: client.go
orchestrator/pkg/metrics/: prometheus.go
orchestrator/pkg/ratelimit/: ratelimit.go  ratelimit_test.go
orchestrator/pkg/resilience/: circuit_breaker.go  circuit_breaker_test.go
orchestrator/pkg/state/: state.go
orchestrator/pkg/supervisor/: tree.go
orchestrator/pkg/transport/: grpc.go
orchestrator/proto/: agenticos.proto
