[package]
name = "ughi-desktop"
version = "0.1.0"
description = "UGHI - Unleashed Global Human Intelligence Desktop App"
authors = ["UGHI Team"]
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0-rc"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ughi-kernel = { path = "../ughi-kernel" }
jsonwebtoken = "9.3.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
