# ughi-inference – CPU-only Shared SLM Inference Engine
# Follows strict_rules.md | No GPU ever | ≥ 15 tok/s on CPU
# Memory: ~8 MB base, model loaded lazily, shared across agents
# KV cache: ≤ 45 MB per agent | 10 agents ≤ 1.1 GB total

[package]
name = "ughi-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
