# ughi-integrations – Chat bridges + proactive features
# Memory: ~4 KB base | Per bridge: ~1 KB

[package]
name = "ughi-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
