# ughi-runtime – Agent micro-kernel with lifecycle, scheduler, and self-healing
# Follows strict_rules.md | Per agent: ≤ 140 MB | 50 agents: ≤ 1.8 GB
# No panic! in core | No Arc<Mutex> spam | Lock-free metrics

[package]
name = "ughi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
nanoid = "0.4"
ring.workspace = true

[dev-dependencies]
tempfile = "3.10"